--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
     <distributionManagement>  
         <repository>
         <id>dropbox-mvn-repo</id>
-        <url>file:///C:\Users\I330152\Dropbox\dropbox_mnv_repo</url>
+        <url>file:///C:/Users/I330152/Dropbox/dropbox_mnv_repo</url>
         </repository>
     </distributionManagement> 
     
